yaml_dockerfile/k8s-yaml/calico/network-policy/3_restrict_ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
  namespace: network-policy
spec:
  podSelector:
    matchLabels:
      app: webapp
      role: backend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: network-policy
      podSelector:
        matchLabels:
          app: webapp
          role: frontend
